--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,3 +19,7 @@ jobs:
         port: ${{ secrets.SSH_PORT }}
         script: |
           cd ~/auth-api
+          git pull origin master
+          npm install
+          npm run migrate up
+          pm2 restart auth-api
